; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_settb.c_activate.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_settb.c_activate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32**, i32** }

@FFERROR_NOT_READY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @activate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @activate(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  %12 = load i32**, i32*** %11, align 8
  %13 = getelementptr inbounds i32*, i32** %12, i64 0
  %14 = load i32*, i32** %13, align 8
  store i32* %14, i32** %4, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32**, i32*** %16, align 8
  %18 = getelementptr inbounds i32*, i32** %17, i64 0
  %19 = load i32*, i32** %18, align 8
  store i32* %19, i32** %5, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @FF_FILTER_FORWARD_STATUS_BACK(i32* %20, i32* %21)
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @ff_inlink_consume_frame(i32* %23, i32** %6)
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %9, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %1
  %28 = load i32, i32* %9, align 4
  store i32 %28, i32* %2, align 4
  br label %53

29:                                               ; preds = %1
  %30 = load i32, i32* %9, align 4
  %31 = icmp sgt i32 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %29
  %33 = load i32*, i32** %4, align 8
  %34 = load i32*, i32** %6, align 8
  %35 = call i32 @filter_frame(i32* %33, i32* %34)
  store i32 %35, i32* %2, align 4
  br label %53

36:                                               ; preds = %29
  %37 = load i32*, i32** %4, align 8
  %38 = call i64 @ff_inlink_acknowledge_status(i32* %37, i32* %7, i32* %8)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %48

40:                                               ; preds = %36
  %41 = load i32*, i32** %5, align 8
  %42 = load i32, i32* %7, align 4
  %43 = load i32*, i32** %4, align 8
  %44 = load i32*, i32** %5, align 8
  %45 = load i32, i32* %8, align 4
  %46 = call i32 @rescale_pts(i32* %43, i32* %44, i32 %45)
  %47 = call i32 @ff_outlink_set_status(i32* %41, i32 %42, i32 %46)
  store i32 0, i32* %2, align 4
  br label %53

48:                                               ; preds = %36
  %49 = load i32*, i32** %5, align 8
  %50 = load i32*, i32** %4, align 8
  %51 = call i32 @FF_FILTER_FORWARD_WANTED(i32* %49, i32* %50)
  %52 = load i32, i32* @FFERROR_NOT_READY, align 4
  store i32 %52, i32* %2, align 4
  br label %53

53:                                               ; preds = %48, %40, %32, %27
  %54 = load i32, i32* %2, align 4
  ret i32 %54
}

declare dso_local i32 @FF_FILTER_FORWARD_STATUS_BACK(i32*, i32*) #1

declare dso_local i32 @ff_inlink_consume_frame(i32*, i32**) #1

declare dso_local i32 @filter_frame(i32*, i32*) #1

declare dso_local i64 @ff_inlink_acknowledge_status(i32*, i32*, i32*) #1

declare dso_local i32 @ff_outlink_set_status(i32*, i32, i32) #1

declare dso_local i32 @rescale_pts(i32*, i32*, i32) #1

declare dso_local i32 @FF_FILTER_FORWARD_WANTED(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
